--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,9 @@ img {
 h1, h2, p, li {
     font-family: 'Raleway', sans-serif;
 }
+h2 {
+    max-width: 300px;
+}
 ul {
     margin-bottom: 50px;
     max-width: 300px;
@@ -54,6 +57,9 @@ ul {
     h2 {
         max-width: 300px;
     }
+    h1 {
+        font-size: 50px;
+    }
 }
 @media all and (max-width: 1100px) {
     video {
@@ -62,13 +68,22 @@ ul {
     h2 {
         max-width: 300px;
     }
+    h1 {
+        font-size: 50px;
+    }
 }
 @media all and (max-width: 800px) {
     video {
         display: none;
     }
-    h2 {
-        max-width: 300px;
+    img {
+        width: 500px;
+    }
+    .App {
+        margin-left: 150px;
+    }
+    h1 {
+        font-size: 50px;
     }
 }
 @media all and (max-width: 500px) {
